Enable JDK 14 preview featurs in the pom.xml file