@@ -93,6 +93,9 @@
                         <release>${java.version}</release>
                         <!-- without forking compilation happens in the same process, so no arguments are applied -->
                         <fork>true</fork>
+                        <compilerArgs>
+                            <compilerArg>--enable-preview</compilerArg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
 
@@ -100,6 +103,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.2</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
